# bale-proxy

./: Cargo.toml  LICENSE  README.md
bale/: Cargo.toml  build.rs
bale-proxy/: Cargo.toml  build.rs
bale-proxy-client/: Cargo.toml  build.rs
bale-proxy-client/src/: main.rs
bale-proxy/src/: error.rs  main.rs  simple_server.rs  socket.rs  utils.rs
bale-proxy/template/: input.html
bale/proto/: auth.proto  configs.proto  maviz.proto  messaging.proto
bale/src/: lib.rs
grpc-web-client/: Cargo.toml
grpc-web-client/src/: call.rs  lib.rs
test/test-client/: Cargo.toml  build.rs
test/test-client/src/: lib.rs
