[package]
name = "bale-proxy"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
bale = { path = "../bale" }
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1.9.0",  features = ["tokio-macros"] }
lazy_static = "1.4.0"
regex = "1.5.4"
url = "2.2.2"

[build-dependencies]
tonic-build = { version = "0.4.2", default-features = false, features = ["prost"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
