[package]
name = "bale-proxy"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
bale = { path = "../bale" }
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1.9.0", features = ["tokio-macros"] }
lazy_static = "1.4.0"
futures = "0.3.16"
regex = "1.5.4"
url = "2.2.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
base64 = "0.13.0"

[build-dependencies]
tonic-build = { version = "0.4.2", default-features = false, features = ["prost"] }
