[package]
name = "grpc-web-client"
version = "0.1.2"
authors = ["Jonathan Rudenberg <jonathan@titanous.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/titanous/grpc-web-client"
homepage = "https://github.com/titanous/grpc-web-client"
description = """
An implementation of the gRPC-Web protocol that allows using tonic.
"""
readme = "../README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["grpc", "tonic"]

[dependencies]
tonic = { version = "0.4.3", default-features = false }
prost = { version = "0.7.0", default-features = false }
http = { version = "0.2.4", default-features = false }
http-body = { version = "0.4.1", default-features = false }
bytes = { version = "1.0.1", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
base64 = { version = "0.13.0", default-features = false }
futures = { version = "0.3.13", default-features = false, features = ["alloc"] }
httparse = { version = "1.4.0", default-features = false }
hyper = { version = "0.14.7", default-features = false }
reqwest = { version = "0.11.4", features = ["native-tls", "stream"] }

